[package]
name = "bench_walk"
version = "0.1.0"
authors = ["Dinko Korunic <dinko.korunic@gmail.com>"]
categories = ["command-line-utilities"]
description = "benchmark suite for Rust filesystem walking crates"
license = "MIT"
exclude = [".gitignore"]
edition = "2021"

[dependencies]
walkdir = "2.5.0"
fts = "0.3.0"
ignore = "0.4.23"
jwalk = "0.8.1"
num_cpus = "1.16.0"
project-root = "0.2.2"

[dev-dependencies]
criterion = "0.5.1"
rm_rf = "0.6.2"

[[bench]]
name = "benchmark"
harness = false

[lib]
bench = false

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
